--- a/public/main.css
+++ b/public/main.css
@@ -1,5 +1,6 @@
 body {
-  background:center no-repeat fixed url("/images/phone.jpg");
+  background:center no-repeat fixed url("/images/phone_w_filter.jpg");
+  height: 100%;
 }
 
 .navbar {
@@ -10,13 +11,18 @@ body {
   resize: none;
 }
 
+#landing_txt {
+  color: #FEF9F8;
+  text-align: right;
+}
+
 h3 {
-  color: white;
   text-align: center;
 }
 
-p {
-  color: white;
+#start_button {
+  position: absolute;
+  right: 60px;
 }
 
 .form-group {
@@ -30,12 +36,33 @@ p {
 
 footer {
   background-color: black;
+  width:100%;
+  height:100px;
+  position:absolute;
+  top:120%;
 }
 
 #footer_links {
-  padding: 20px;
+  padding: 30px;
+  color: white;
 }
 
-.ptop40 {
-  padding-top: 40px;
+.ptop {
+  padding: 30px 0 30px 0;
+}
+
+.tooltip {
+  background-color:#000;
+  border:1px solid #fff;
+  display: inline;
+  width:475px;
+  color:#fff;
+
+  -moz-box-shadow:0 0 10px #000;
+  -webkit-box-shadow:0 0 10px #000;
+}
+
+.tooltip>.tooltip-inner {
+  display: inline;
+  font-size: 14px;
 }
