--- a/views/confirmation.erb
+++ b/views/confirmation.erb
@@ -1,7 +1,24 @@
 <div class="container-fluid">
-  <div class="jumbotron">
+  <div class="well" id="confirmation_well">
     <div class="container">
       <h1>Your message has been sent!</h1>
+      <h3>Thanks for using the app. For more about me, visit any of the links below.</h3>
+      <div id="border"></div>
+      <div class="row">
+        <div class="col-sm-1 col-sm-offset-4 col-xs-4">
+            <a href="https://github.com/adamesj"><i class ="fa fa-github fa-4x" id="footer_icons"></i></a>
+        </div>
+        <div class="col-sm-1 col-xs-4">
+            <a href="https://www.facebook.com/jimmy.adames.9"><i class="fa fa-facebook fa-4x" id="footer_icons"></i></a>
+        </div>
+        <div class="col-sm-1 col-xs-4">
+            <a href="https://twitter.com/Intricatelyme"><i class="fa fa-twitter fa-4x" id="footer_icons"></i></a>
+        </div>
+        <div class="col-sm-1 col-xs-4">
+            <a href="https://www.linkedin.com/in/jimmy-adames-75297338"><i class="fa fa-linkedin fa-4x" id="footer_icons"></i></a>
+        </div>
+      </div>
+      <div id="border"></div>
     </div>
   </div>
 </div>
