--- a/public/main.css
+++ b/public/main.css
@@ -1,23 +1,23 @@
 body {
-  background:center no-repeat fixed url("/images/phone_w_filter.jpg");
+  background: url("/images/phone_w_filter.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  margin: 0;
+  padding: 0;
   height: 100%;
 }
 
+/* Navigation*/
 .navbar {
   margin-bottom: 0;
 }
 
-#msg {
-  resize: none;
-}
-
+/* Landing page */
 #landing_txt {
   color: #FEF9F8;
   text-align: right;
-}
-
-h3 {
-  text-align: center;
 }
 
 #start_button {
@@ -25,30 +25,10 @@ h3 {
   right: 60px;
 }
 
-.form-group {
-  display: block;
-  margin: 0 auto;
-}
-
-.form-group {
-  width: 400px;
-}
-
-footer {
-  background-color: black;
-  width:100%;
-  height:100px;
-  position:absolute;
-  top:120%;
-}
-
-#footer_links {
-  padding: 30px;
-  color: white;
-}
-
-.ptop {
-  padding: 30px 0 30px 0;
+/* Main interface */
+h3 {
+  text-align: center;
+  margin-bottom: 10px;
 }
 
 .tooltip {
@@ -57,7 +37,6 @@ footer {
   display: inline;
   width:475px;
   color:#fff;
-
   -moz-box-shadow:0 0 10px #000;
   -webkit-box-shadow:0 0 10px #000;
 }
@@ -65,4 +44,51 @@ footer {
 .tooltip>.tooltip-inner {
   display: inline;
   font-size: 14px;
+}
+
+.buffer {
+  margin: 10px 0 50px 0;
+}
+
+#msg_box {
+  resize: none;
+}
+
+.form-group {
+  display: block;
+  margin: 0 auto;
+  width: 350px;
+}
+
+/* Confirmation page */
+
+h1 {
+  text-align: center;
+}
+
+#confirmation_well {
+  height: 400px;
+}
+
+#border {
+  width: 650px;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  margin: 40px 0 40px 220px;
+  padding-top: 20px;
+}
+
+/* Footer */
+footer {
+  background-color: black;
+  width:100%;
+  height:100px;
+  bottom: 0;
+  clear: both;
+  position: absolute;
+}
+
+#footer_links {
+  padding: 30px;
+  color: white;
 }
