--- a/views/index.erb
+++ b/views/index.erb
@@ -1,39 +1,35 @@
-<div class="ptop">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-6">
-        <div class="jumbotron">
-          <form action='/send_sms' method="post" id="my_form">
-            <h3>Send an SMS message here</h3>
-            <div class="form-group">
-              <label for="number">Recipient's phone number:</label>
-              <input type="tel" name="recipient_tel" class="form-control" value="+1" data-toggle="tooltip" data-placement="bottom" placeholder="+1" id="tel_input">
-            </div>
-            <div class="form-group">
-              <label for="message">Message:</label>
-              <textarea type="text" name="message" rows="10" class="form-control" placeholder="Limit 200 Characters" maxlength="201" id="msg"></textarea>
-              <div class="character-count" id = "char-count">
-                  <p></p>
-              </div>
-
-              <div class="comment" id = "visible-comment">
-                  <p></p>
-              </div>
-            </div>
-            <div class="form-group">
-              <button type="submit" class="btn btn-primary" id="submit_button" onClick="return empty()">Submit</button>
-            </div>
-          </form>
-        </div>
+<div class="container">
+  <div class="row buffer">
+    <div class="col-md-6">
+      <div class="well">
+        <h3>Instructions:</h3>
+        <p>- Enter the recipient's phone number</p>
+        <p>- Enter your message</p>
+        <p>- Submit and voila! It's that simple</p>
       </div>
-
-      <div class="col-md-6">
-        <div class="jumbotron">
-          <h3 id="instruct">Instructions:</h3>
-          <p>- Enter the recipient's phone number</p>
-          <p>- Enter your message</p>
-          <p>- Submit and voila! It's that simple</p>
-        </div>
+    </div>
+    <div class="col-md-6">
+      <div class="well">
+        <form action='/send_sms' method="post" id="my_form">
+          <h3>Send an SMS message here</h3>
+          <div class="form-group">
+            <label for="number">Recipient's phone number:</label>
+            <input type="tel" name="recipient_tel" class="form-control" value="+1" data-toggle="tooltip" data-placement="bottom" placeholder="+1" id="tel_input">
+          </div>
+          <div class="form-group">
+            <label for="message">Message:</label>
+            <textarea type="text" name="message" rows="10" class="form-control" placeholder="Limit 200 Characters" maxlength="201" id="msg_box"></textarea>
+            <div class="character-count" id="char-count">
+                <p></p>
+            </div>
+            <div class="comment" id="visible-comment">
+                <p></p>
+            </div>
+          </div>
+          <div class="form-group">
+            <button type="submit" class="btn btn-primary" id="submit_button" onClick="return empty()">Submit</button>
+          </div>
+        </form>
       </div>
     </div>
   </div>
