--- a/views/layout.erb
+++ b/views/layout.erb
@@ -25,7 +25,7 @@
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><a href="/home">Home</a></li>
+          <li><a href="/">Home</a></li>
         </ul>
       </div>
     </div>
