--- a/views/confirmation.erb
+++ b/views/confirmation.erb
@@ -19,6 +19,7 @@
         </div>
       </div>
       <div id="border"></div>
+      <a href='/index' class="btn btn-primary" id="redirect_btn">Wanna send another message?</a>
     </div>
   </div>
 </div>
