added jquery for number formatting

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,6 +8,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <script src="/jquery.stellar.min.js"></script>
+  <script src="/jquery.maskedinput.js"></script>
   <script src="/main.js"></script>
 </head>
 <body>
@@ -21,11 +22,13 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/index">Messengr</a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li><a href="/">Home</a></li>
+        </ul>
+        <ul class="nav navbar-nav">
+          <li><a href="/index">Messengr</a></li>
         </ul>
       </div>
     </div>
