--- a/public/main.css
+++ b/public/main.css
@@ -29,25 +29,11 @@ body {
 h3 {
   text-align: center;
   margin-bottom: 10px;
-}
-
-.tooltip {
-  background-color:#000;
-  border:1px solid #fff;
-  display: inline;
-  width:475px;
-  color:#fff;
-  -moz-box-shadow:0 0 10px #000;
-  -webkit-box-shadow:0 0 10px #000;
-}
-
-.tooltip>.tooltip-inner {
-  display: inline;
-  font-size: 14px;
+  padding: 5px;
 }
 
 .buffer {
-  margin: 10px 0 50px 0;
+  margin: 30px 0 60px 0;
 }
 
 #msg_box {
@@ -57,7 +43,7 @@ h3 {
 .form-group {
   display: block;
   margin: 0 auto;
-  width: 350px;
+  width: 375px;
 }
 
 /* Confirmation page */
@@ -87,8 +73,8 @@ h1 {
 /* Footer */
 footer {
   background-color: black;
-  width:100%;
-  height:100px;
+  width: 100%;
+  height: 100px;
   bottom: 0;
   clear: both;
   position: absolute;
