--- a/views/index.erb
+++ b/views/index.erb
@@ -1,24 +1,16 @@
-<div class="container">
-  <div class="row buffer">
-    <div class="col-md-6">
-      <div class="well">
-        <h3>Instructions:</h3>
-        <p>- Enter the recipient's phone number</p>
-        <p>- Enter your message</p>
-        <p>- Submit and voila! It's that simple</p>
-      </div>
-    </div>
+<div class="container buffer">
+  <div class="row">
     <div class="col-md-6">
       <div class="well">
         <form name='message_form' action='/send_sms' method="post" id="my_form" onsubmit="return validateForm()">
           <h3>Send an SMS message here</h3>
           <div class="form-group">
             <label for="number">Recipient's phone number:</label>
-            <input type="tel" name="recipient_tel" class="form-control" value="+1" data-toggle="tooltip" data-placement="bottom" placeholder="+1" id="tel_input">
+            <input type="tel" name="recipient_tel" class="form-control" placeholder="(123) 456-7890" id="tel_input">
           </div>
           <div class="form-group">
             <label for="message">Message:</label>
-            <textarea type="text" name="message" rows="10" class="form-control" placeholder="Limit 200 Characters" maxlength="201" id="msg_box"></textarea>
+            <textarea type="text" name="message" rows="8" class="form-control" placeholder="Limit 200 Characters" maxlength="201" id="msg_box"></textarea>
             <div class="character-count" id="char-count">
                 <p></p>
             </div>
@@ -27,6 +19,14 @@
             <button type="submit" class="btn btn-primary" id="submit_button">Submit</button>
           </div>
         </form>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="well">
+        <h3>Instructions:</h3>
+        <p>- Enter the recipient's phone number <strong>(numbers are formatted automatically)</strong></p>
+        <p>- Enter your message</p>
+        <p>- Submit and voila! It's that simple</p>
       </div>
     </div>
   </div>
