added verification for input fields

--- a/views/index.erb
+++ b/views/index.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-6">
       <div class="well">
-        <form name='message_form' action='/send_sms' method="post" id="my_form" onsubmit="return validateForm()">
+        <form name='message_form' action='/send_sms' method="post" id="my_form" onsubmit="return validateMessage()">
           <h3>Send an SMS message here</h3>
           <div class="form-group">
             <label for="number">Recipient's phone number:</label>
