--- a/public/main.css
+++ b/public/main.css
@@ -75,10 +75,10 @@ footer {
   background-color: black;
   width: 100%;
   height: 100px;
-  bottom: 0;
-  clear: both;
-  position: absolute;
+  bottom: 0px;
+  position: fixed;
 }
+
 
 #footer_links {
   padding: 30px;
